install vtk package

--- a/desktop/jupyter.desktop
+++ b/desktop/jupyter.desktop
@@ -1,7 +1,11 @@
 [Desktop Entry]
-Name=Napari-jupyter
-Comment=Jupyter Lab
-Exec=jupyter lab
-Icon=/usr/local/lib/python3.10/dist-packages/jupyterlab/docs/source/_static/logo-icon.png
+Name=JupyterLab
+Comment=Run JupyterLab
+Exec=jupyter-lab %f
 Terminal=true
 Type=Application
+Icon=jupyterlab
+StartupNotify=true
+MimeType=application/x-ipynb+json;
+Categories=Development;Education;
+Keywords=python;
